[package]
name = "cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
config = { git ="https://github.com/blackwood-studio/config.git" }
anyhow = "1.0.71"
